Add workflow and extend API for edf anonymisation (#9)
